add new className

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <label class="nav__trigger-finger" for="trigger">
             <span></span>
         </label>
-        <ul class="nav__list">
+        <ul class="nav__list item">
             <div class="row">
                 <div class="col-12">
                     <label for="url" class="mt-2" style="font-size:14px ;"><b>Video urlini kiriting</b></label>
